fixed alignment of each section

--- a/style.css
+++ b/style.css
@@ -10,6 +10,8 @@
 
 .text-grey {
   color: #727272;
+  margin: 25px 0px;
+  line-height: 25px;
 }
 
 .title {
@@ -61,6 +63,9 @@ nav li a {
 }
 
 /* banner styles */
+.banner {
+  margin-top: 100px;
+}
 .banner-content {
   max-width: 800px;
   text-align: center;
@@ -75,12 +80,13 @@ nav li a {
 
 .banner img {
   width: 100%;
-  margin-top: 20px;
+  margin-top: 50px;
+  border-radius: 8px;
 }
 
 main {
   max-width: 1440px;
-  margin: 70px auto;
+  margin: 100px auto;
 }
 
 /* featured styles */
@@ -119,50 +125,60 @@ main {
   gap: 145px;
 }
 
-.more-featured-img img{
-    height: 90%;
-    margin-left: 50px;
+.more-featured-img img {
+  height: 90%;
+  margin-left: 50px;
 }
-.more-featured-content .title{
-    border-left: 5px solid #FF900E;
-    padding-left: 20px;
+.more-featured-content .title {
+  border-left: 5px solid #ff900e;
+  text-align: left;
+  padding-left: 20px;
 }
 
 .more-featured-card {
-    padding: 30px;
-    margin-bottom:20px;
+  padding: 30px;
+  margin-bottom: 20px;
   border-radius: 8px;
   background: #fff;
   box-shadow: 0px 4px 30px 0px rgba(0, 0, 0, 0.06);
 }
 
-.ten-years-button{
-    border-radius: 8px;
-    background: #FF900E;
-    color: #fff;
-    width: 342px;
-    padding: 40px;
-    text-align: center;
-    position: relative;
-    bottom: 100px;
+.ten-years-button {
+  border-radius: 8px;
+  background: #ff900e;
+  color: #fff;
+  width: 340px;
+  padding: 40px;
+  text-align: center;
+  position: relative;
+  bottom: 100px;
 }
 
-.ten-years-button h2{
-    font-size: 65px;
-    margin: 0;
+.ten-years-button h2 {
+  font-size: 65px;
+  margin: 0;
 }
 
-.ten-years-button p{
-    color: #FFF;
-font-size: 25px;
-font-weight: 500;
-line-height: 40px;
+.ten-years-button p {
+  color: #fff;
+  font-size: 25px;
+  font-weight: 500;
+  line-height: 40px;
 }
 
 /* facts section styles */
 .facts-card-container {
   display: flex;
   justify-content: space-around;
+}
+
+.facts-container .title{
+text-align: left;
+margin-top: 130px;
+}
+
+.facts-container > p{
+    width: 545px;
 }
 
 .card {
@@ -185,9 +201,17 @@ line-height: 40px;
   margin-top: 5px;
 }
 
+
+
 /* sponsor section styles */
 .sponsors-container {
   text-align: center;
+  margin-top: 100px;
+}
+
+.sponsors-container > p{
+    width: 542px;
+    margin: 25px auto 50px;
 }
 
 .sponsors-img-gallery {
@@ -200,18 +224,23 @@ line-height: 40px;
 
 .sponsors-img-gallery img {
   width: 165px;
+  filter: grayscale(100%);
 }
+
+
 
 /* footer section styles */
-.footer-content{
-    border-radius: 8px;
-background: #FFF4E7;
-padding: 40px;
-text-align: center;
+.footer-content {
+  width: 1440px;
+  border-radius: 8px;
+  background: #fff4e7;
+  padding: 30px 0px;
+  text-align: center;
+  margin: 0 auto 216px;
 }
 
-.footer-content p{
-    color: #424242;
+.footer-content p {
+  color: #424242;
 }
 
 /* responsive styles for small/mobile devices*/
@@ -227,11 +256,11 @@ text-align: center;
     flex-direction: column;
   }
 
-  .more-featured-img img{
+  .more-featured-img img {
     width: 90%;
     margin-left: 0;
   }
-  .ten-years-button{
+  .ten-years-button {
     position: static;
     max-width: 300px;
   }
